# hacs_waste_collection_schedule

./: .codespellignore  .gitignore  .pre-commit-config.yaml  default_translations.py  pyproject.toml  requirements.txt  update_docu_links.py
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  SOURCE-REQUEST.yml  config.yml
.github/workflows/: validate.yaml
custom_components/waste_collection_schedule/: __init__.py  calendar.py  config_flow.py  init_ui.py  init_yaml.py  sensor.py  wcs_coordinator.py
custom_components/waste_collection_schedule/translations/: de.json  en.json  fr.json  it.json
custom_components/waste_collection_schedule/waste_collection_schedule/: collection.py  collection_aggregator.py  exceptions.py  source_shell.py
custom_components/waste_collection_schedule/waste_collection_schedule/service/: A_region_ch.py  AbfallnaviDe.py  AppAbfallplusDe.py  CitiesAppsCom.py  DeviceKeyStore.py  EcoHarmonogramPL.py  ICS.py  SSLError.py  Samiljo_se_wastetype_searcher.py  WhatBinDay.py  generate_ukbcd_json.py  junker_app.py
custom_components/waste_collection_schedule/waste_collection_schedule/source/: 1coast_com_au.py  a_region_ch.py  abfall_havelland_de.py  abfall_io.py  abfall_lro_de.py  abfall_neunkirchen_siegerland_de.py  abfall_wiener_neustadt_at.py  abfallkalender_gifhorn_de.py  abfallkalender_prezero_network.py  abfallnavi_de.py  abfallwirtschaft_germersheim_de.py  abki_de.py  (+520 more)
doc/: configuration.yaml
doc/ics/: entsorgung_cham_de.md  sds_schwerin_de.md
doc/ics/yaml/: entsorgung_cham_de.yaml  recollect.yaml  sds_schwerin_de.yaml
doc/source/: avfallsapp_se.md  awn_de.md  bielefeld_de.md  hvcgroep_nl.md  mzv_rotenburg_bebra_de.md  south_norfolk_and_broadland_gov_uk.md  umweltverbaende_at.md
tests/: bandit.yaml  test_darebin_vic_gov_au.py  test_olo_sk.py  test_source_components.py
(+13 files in other folders)
