[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hacs-waste-collection-schedule"
version = "0.0.0"
description = "Waste Collection Schedule custom component"
requires-python = ">=3.13"

dependencies = [
    "beautifulsoup4>=4.12.2",
    "cloudscraper>=1.2.71",
    "DateTime>=4.9",
    "icalendar>=4.0.9",
    "icalevents>=0.1.29",
    "python-dateutil>=2.8.2",
    "pytz>=2021.3",
    "PyYAML>=6.0.1",
    "requests>=2.31.0",
    "urllib3>=2.0",
    "jinja2>=3.1.2",
    "lxml>=6.0.2",
    "defusedxml>=0.7.1",
    "pycryptodome>=3.20.0",
    "typing_extensions>=4.12.2",
    "pypdf>=5.1.0",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "bandit>=1.7.9",
    "pytest>=8.0.0",
    "types-requests",
    "types-python-dateutil",
    "debugpy>=1.8.0",
]

# WICHTIG: verhindert Flat-Layout Packaging-Fehler
[tool.setuptools]
packages = []

# =========================
# Ruff
# =========================

[tool.ruff]
target-version = "py313"
line-length = 127

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E203", "E266", "E501", "F403", "F405", "I001", "UP007"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =========================
# MyPy
# =========================

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_any_generics = false
warn_return_any = false
check_untyped_defs = false
no_implicit_optional = false
# =========================
# Bandit
# =========================

[tool.bandit]
skips = ["B101"]
